Grad2-2052 part -2 Code smell corrections.